fixed overlapping of creative data on data

--- a/app/assets/stylesheets/reports.less
+++ b/app/assets/stylesheets/reports.less
@@ -2465,23 +2465,18 @@ div.strategy_total_container {
       }
     }
   }
-
-
-
-
   #reports_bycreatives_block{
     .vid_data_hdr{
       margin-left:1px;
       padding-left:0;
       width:297px;
     }
-  }
-
-
-
-  #reports_bycreatives_block{
+    .vid_sub_col_hdr , .vid_quartile_data{
+      width: 65px ;
+    }
     .each_col{
       width:125px;
+      word-wrap : break-word;
       text-align: right;
       &.first_col{
         width:100%;
